<resources>
    <string name="app_name">KghApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Enter Password</string>
    <string name="re_enter_password">Re enter Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="forgot_passsword">Forgot password </string>
    <string name="full_name">Full Name :</string>
    <string name="about">About</string>
    <string name="qualification">Qualification :</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="home">Home</string>
    <string name="course_lists">Course Lists</string>
    <string name="course_details">Course Details</string>
    <string name="purchase_courses">Purchase courses</string>
    <string name="demo_videos">Demo videos</string>
    <string name="duration">Duration</string>
    <string name="price">Price</string>
    <string name="teacher_profile">Teacher Profile</string>
    <string name="graduation">Graduation</string>
    <string name="search_here">Search here</string>
    <string name="send">Send</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="fill_the_below_fields_and_register_yourself_n_with_us_to_continue">Fill the below fields and register yourself \n with us to continue</string>
    <string name="about_kgh_academy">About KGH Academy</string>
    <string name="director_s_message">Director\'s Message</string>
    <string name="already_ac">Already a User ? <b><font color='#FF9801'>Login Now</font></b></string>
    <string name="new_user">New User ? <b><font color='#FF9801'>Register here</font></b></string>
    <string name="forgot_pass">Forgot Password ?<b><font color='#FF9801'> Click here</font></b></string>
    <string name="notification_date">Notification Date :</string>
    <string name="notification_time">Notification Time :</string>
    <string name="class_notification">Class Notification</string>
    <string name="confirmation">Confirmation</string>
    <string name="here_will_be_the_exams">Here will be the exams</string>
    <string name="total_questions">Total Questions</string>
    <string name="negative_marks">Negative Marks</string>
    <string name="total_time">Total Time</string>
    <string name="minutes">Minutes</string>
    <string name="marks">Marks</string>
    <string name="go_to_home">Go to home</string>
    <string name="we_have_a_submitted_the_exam_result_will_be_available_on_date">We have a submitted the exam,result will be available on date</string>
    <string name="online_exams">Online Exams</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="start_exam">Start Exam</string>
    <string name="help_to_support">Help To Support</string>
    <string name="submit">Submit</string>
    <string name="view_all_classes">View all classes</string>
    <string name="lo_gin">Login</string>
    <string name="course_list">Course List</string>
    <string name="view_all_courses">View all Courses</string>
    <string name="notification">Notification</string>
    <string name="clear_all_notifications">Clear All Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile number</string>
    <string name="student_eduction">Student Eduction</string>
    <string name="student_id">Student Id</string>
    <string name="gender">Gender</string>
    <string name="student_name">Student Name</string>
    <string name="wrong_questions">Wrong Questions</string>
    <string name="correct_questions">Correct Questions</string>
    <string name="total_obtain_mark">Total Obtain Mark</string>
    <string name="date_purchased">Date Purchased</string>
    <string name="course_progress">Course Progress</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="exam">Exam</string>
    <string name="submit_amp_exam"><![CDATA[Submit & Exam]]></string>
    <string name="clear_answer">Clear answer</string>
    <string name="questions">Questions</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause Timer</string>
    <string name="pdf_material">PDF Material</string>
    <string name="uploaded">Uploaded :</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="select_the_exam_type">Select the exam type</string>
    <string name="online_exam">Online Exam</string>
    <string name="select_course">Select Course</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_topic">Select Topic</string>
    <string name="select_exam">Select Exam</string>
    <string name="thank_you">Thank You</string>
    <string name="view_classes">View Classes</string>
    <string name="thank_you_for_your_purchase">Thank You ! for your purchase</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="email">Email :</string>
    <string name="mobile">Mobile :</string>
    <string name="amount">Amount</string>
    <string name="course_name">Course Name</string>
    <string name="transaction_cahrges">Transaction Cahrges</string>
    <string name="total_price">Total Price</string>
    <string name="complete_purchase">Complete Purchase</string>
    <string name="change">Change</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="view_all">View All</string>
    <string name="purchase_history">Purchase History</string>

</resources>