<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:id="@+id/ivProfile"
            android:layout_height="120dp"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/ivStudent"
                android:layout_marginTop="40dp"
                android:src="@drawable/usernew"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_name"
                android:textSize="14dp"
                android:layout_toRightOf="@+id/ivStudent"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:id="@+id/tx"
                android:fontFamily="@font/poppinsbold"
                android:layout_marginLeft="5dp"
                android:layout_gravity="start"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/ivStudent"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:id="@+id/etName"
                android:layout_below="@+id/tx"
                android:layout_marginLeft="5dp"
                android:gravity="start"
                android:textColor="@color/grey"
                android:text="Ramesh Kumar Agarwal"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_toRightOf="@+id/rlMAin"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:id="@+id/iv2"
                android:src="@drawable/pronew"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="14dp"
                android:layout_toRightOf="@+id/iv2"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:id="@+id/txGender"
                android:fontFamily="@font/poppinsbold"
                android:layout_marginLeft="5dp"
                android:layout_gravity="start"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_toRightOf="@+id/iv2"
                android:textStyle="bold"
                android:id="@+id/etGender"
                android:background="@null"
                android:layout_below="@+id/txGender"
                android:layout_marginLeft="10dp"
                android:gravity="start"
                android:textColor="@color/grey"
                android:text="Male"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/ivMobile"
                android:layout_marginTop="40dp"
                android:src="@drawable/mobilenew"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textSize="14dp"
                android:layout_toRightOf="@+id/ivMobile"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:id="@+id/txMobile1"
                android:fontFamily="@font/poppinsbold"
                android:layout_below="@+id/ll_dur2"
                android:layout_marginLeft="5dp"
                android:layout_gravity="start"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txMobile1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:gravity="start"
                android:id="@+id/etMobile"
                android:background="@null"
                android:text="91-0123456789"
                android:textColor="@color/grey"
                android:textSize="13dp"
                android:textStyle="bold" />


        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnprofile"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:fontFamily="@font/poppinseemibold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>