<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PaymentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/rl_main"
                android:background="@color/darkBlue">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/back_arrow"
                    android:padding="10dp"
                    android:visibility="visible"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Purchase course"
                    android:textSize="18dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"/>



            </RelativeLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardElevation="6dp"
        app:cardCornerRadius="12sp"
        android:layout_margin="15dp"

        android:layout_height="wrap_content"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A P P S C- Group II"
                android:textSize="12dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsbold"
                android:layout_marginLeft="15dp"
                android:layout_gravity="start"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="20dp"
                    android:text="Telugu Medium"
                    android:textSize="12dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/sky_blue_rounded"
                    android:textColor="@color/teal_800"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/full_name"/>



            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/email"/>



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/mobile"/>



            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dbdbdb"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppinseemibold"
                    android:text="@string/course_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/poppinseemibold"
                    android:text="@string/amount"/>


            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dbdbdb"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="APPSC-Group"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/poppinsregular"
                    android:text="-"/>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dbdbdb"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/transaction_cahrges"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/poppinsregular"
                    android:text="-"/>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dbdbdb"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppinseemibold"
                    android:text="@string/total_price"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/poppinsregular"
                    android:text="-"/>


            </RelativeLayout>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="30dp"
                app:cornerRadius="8dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:textAllCaps="false"
                android:id="@+id/btnPurchaseNow"
                android:text="@string/complete_purchase"
                android:textColor="@color/white"/>


        </LinearLayout>


    </ScrollView>
</RelativeLayout>